# SyDNEy

./: README.md  SyDNEy.py  pyproject.toml
sydney/: main.py
