[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sydney"
version = "1.3.0"
description = "SyDNEy: Stable Diffusion Numerical Explorer"
readme = "README.md"
authors = [
  { name = "Patrick Feaster", email = "pfeaster@gmail.com" }
]
license = { text = "MIT" }  # Change if needed
requires-python = ">=3.9"
dependencies = [
    "torch>=2.0.0,<2.13",
    "torchvision>=0.15.1,<0.17",
    "torchaudio>=2.0.1,<2.13",
    "diffusers>=0.18.2,<=0.20.2",
    "transformers>=4.28.1,<=4.32.1",
    "numpy>=1.24.3,<=1.26.3",
    "Pillow>=9.4.0,<=10.0.1",
    "soundfile>=0.10.2,<=0.12.1",
    "audio2numpy==0.1.2",
    "scipy>=1.10.1,<=1.11.4",
    "opencv-python>=4.8.0,<=4.9.0",
    "tk"
]

[project.urls]
"Homepage" = "https://github.com/pfeaster/SyDNEy"
"Bug Tracker" = "https://github.com/pfeaster/SyDNEy/issues"

[project.scripts]
sydney = "sydney.main:main"
